<resources>
	<string name="app_name">StaffProfileApp</string>
	
	<string name="welcome">WELCOME</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="sign_in">Sign in</string>
	<string name="forgot_password">Forgot password?</string>
	<string name="create_account">Create new account</string>
	<string name="create_new_account">CREATE NEW \n ACCOUNT</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="email_address">Email Address</string>
	
	<string name="error_message">Sign in failed! Wrong password or username</string>
	<string name="no_account">Don\'t have an account?</string>
	<string name="username">Username</string>
	<string name="terms_and_conditions">By tapping \"Sign Up\" you agree \n to the terms &amp; Conditions</string>
	<string name="date_of_birth">Date of birth</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
