<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true">
		
		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:context=".auth.SignInFragment">
			
			<ImageView
					android:id="@+id/img_app_icon"
					android:layout_width="100dp"
					android:layout_height="100dp"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="@id/tv_app_name"
					android:src="@drawable/social_vue_icon"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHorizontal_bias="0.28"
					app:layout_constraintVertical_bias="0.14"/>
			
			<TextView
					android:id="@+id/tv_app_name"
					android:layout_width="0dp"
					app:layout_constraintTop_toTopOf="@id/img_app_icon"
					app:layout_constraintBottom_toBottomOf="@id/img_app_icon"
					android:text="@string/app_name"
					android:textAllCaps="true"
					android:textSize="24sp"
					android:layout_marginStart="8dp"
					app:layout_constraintLeft_toRightOf="@id/img_app_icon"
					app:layout_constraintRight_toRightOf="parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/open_sans_semi_bold"/>
			
			
			<TextView
					android:id="@+id/tvWelcome"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:text="@string/welcome"
					android:gravity="center"
					android:textSize="26sp"
					app:layout_constraintTop_toBottomOf="@id/img_app_icon"
					android:layout_marginTop="26dp"
					android:fontFamily="@font/open_sans_light"/>
			
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/email_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/email"
					android:layout_marginTop="16dp"
					app:layout_constraintTop_toBottomOf="@id/tvWelcome"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					android:layout_marginStart="20dp"
					android:layout_marginEnd="20dp"
					app:errorEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/email_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textEmailAddress"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/password_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password"
					app:layout_constraintTop_toBottomOf="@id/email_text_input"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginStart="20dp"
					android:layout_marginEnd="20dp"
					app:errorEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/password_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			
			<TextView
					android:id="@+id/tv_forgotPassword"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="@id/password_text_input"
					android:text="@string/forgot_password"
					android:gravity="center"
					android:textSize="18sp"
					app:layout_constraintTop_toBottomOf="@id/password_text_input"
					android:layout_marginTop="4dp"
					android:clickable="true"
					android:focusable="true"
					android:fontFamily="@font/open_sans"/>
			
			<com.google.android.material.button.MaterialButton
					android:id="@+id/btnSignUp"
					style="@style/Widget.MaterialComponents.Button"
					android:layout_width="0dp"
					android:layout_height="70dp"
					android:text="@string/sign_in"
					app:layout_constraintRight_toRightOf="@id/password_text_input"
					app:layout_constraintLeft_toLeftOf="@id/password_text_input"
					app:cornerRadius="30dp"
					app:elevation="12dp"
					app:backgroundTint="@color/primary"
					android:layout_marginTop="20dp"
					app:layout_constraintTop_toBottomOf="@id/tv_forgotPassword"/>
			
			<TextView
					android:id="@+id/tv_no_account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="@id/password_text_input"
					android:text="@string/no_account"
					android:gravity="center"
					android:textSize="18sp"
					app:layout_constraintTop_toBottomOf="@id/btnSignUp"
					app:layout_constraintStart_toStartOf="@id/password_text_input"
					app:layout_constraintBottom_toBottomOf="parent"
					android:layout_marginTop="4dp"
					android:fontFamily="@font/open_sans"/>
			
			<TextView
					android:id="@+id/tv_create_account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="@id/password_text_input"
					android:text="@string/create_account"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/accent"
					android:clickable="true"
					android:focusable="true"
					app:layout_constraintTop_toBottomOf="@id/tv_no_account"
					app:layout_constraintStart_toStartOf="@id/password_text_input"
					android:fontFamily="@font/open_sans"/>
			
			<TextView
					android:id="@+id/tv_error"
					android:layout_width="0dp"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_height="50dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					android:text="@string/error_message"
					android:gravity="center"
					android:textSize="18sp"
					android:visibility="gone"
					android:background="@drawable/error_drawable"
					android:textColor="@color/icons"
					android:fontFamily="@font/open_sans_semi_bold"/>
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	</ScrollView>
</layout>