<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true">
		
		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				tools:context=".auth.SignUpFragment">
			
			<TextView
					android:id="@+id/tv_new_create_account"
					android:layout_width="0dp"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:gravity="center"
					android:text="@string/create_new_account"
					android:textSize="22sp"
					android:padding="2dp"
					android:layout_height="wrap_content"
					app:layout_constraintBottom_toBottomOf="parent"
					android:fontFamily="@font/open_sans"
					app:layout_constraintVertical_bias="0.10"/>
			
			<com.google.android.material.textfield.TextInputLayout
					app:layout_constraintTop_toBottomOf="@id/tv_new_create_account"
					app:layout_constraintBottom_toBottomOf="parent"
					android:id="@+id/first_name_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:hint="@string/first_name"
					app:layout_constraintEnd_toStartOf="@id/last_name_text_input"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					app:errorEnabled="true"
					app:layout_constraintVertical_bias="0.12">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/first_name_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPersonName"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			
			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/last_name_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toEndOf="@id/first_name_text_input"
					android:hint="@string/last_name"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="@id/first_name_text_input"
					android:layout_marginEnd="16dp"
					app:errorEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/last_name_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPersonName"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					app:layout_constraintTop_toBottomOf="@id/first_name_text_input"
					android:id="@+id/username_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@id/first_name_text_input"
					android:hint="@string/username"
					app:layout_constraintEnd_toEndOf="@id/last_name_text_input"
					app:errorEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/username_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPersonName"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					app:layout_constraintTop_toBottomOf="@id/username_text_input"
					android:id="@+id/email_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@id/username_text_input"
					android:hint="@string/email_address"
					app:layout_constraintEnd_toEndOf="@id/username_text_input"
					app:errorEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/email_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textEmailAddress"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
					app:layout_constraintTop_toBottomOf="@id/email_text_input"
					android:id="@+id/password_text_input"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="@id/email_text_input"
					android:hint="@string/password"
					app:layout_constraintEnd_toEndOf="@id/email_text_input"
					app:errorEnabled="true">
				
				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/password_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="textPassword"/>
			</com.google.android.material.textfield.TextInputLayout>
			
			
			<TextView
					android:id="@+id/tv_terms_conditions"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintTop_toBottomOf="@id/password_text_input"
					android:layout_marginTop="10dp"
					android:gravity="center"
					android:textSize="18sp"
					android:fontFamily="@font/open_sans"
					android:text="@string/terms_and_conditions"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"/>
			
			
			<com.google.android.material.button.MaterialButton
					android:id="@+id/btnSignUp"
					style="@style/Widget.MaterialComponents.Button"
					android:layout_width="0dp"
					android:layout_height="70dp"
					android:text="Create new Account"
					app:layout_constraintRight_toRightOf="@id/password_text_input"
					app:layout_constraintLeft_toLeftOf="@id/password_text_input"
					app:cornerRadius="30dp"
					app:elevation="12dp"
					android:textAllCaps="true"
					app:backgroundTint="@color/primary"
					android:layout_marginTop="20dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toBottomOf="@id/tv_terms_conditions"/>
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	
	</ScrollView>
</layout>